---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 15/1/26
  Major Features:
    - Added mod setting for controlling the efficiency of trades (which is the average ratio of the trade's total output-to-input value).
  Changes:
    - Item counts in trades no longer exceed 100 or five total stacks (whichever is smaller).
    - Item counts in trades are now more varied, where lower-valued items are generally in higher quanities than the higher-valued items on the same side of the trade.
  Gui:
    - Improved horizontal alignment of productivity labels on trade arrows.
    - Coin amounts for "Stack Value (Total)" in item tooltips are now rounded to four significant figures instead of zero digits after the decimal.
  Bugfixes:
    - Fixed that sink/generator mode did not reliably create trades with a 10:1 input-to-output efficiency.
    - Fixed missing locale for electric damage / shooting speed.
  Locale:
    - Added additional info to the mod settings for "Base Trade Productivity" to help explain what "trade productivity" is.
  Optimizations:
    - Optimized trade item count selection: O(n) -> O(logn).
---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 19/12/25
  Features:
    - Unlocked from the "First Silver Star" quest, you can now make single-batch trades within your inventory at the press of a button in the hex core GUI.
  Minor Features:
    - Added "buy max" button in Quantum Bazaar for buying as many items as can fit in your inventory.
    - Added mod settings for managing trade overview processing rates: "Trade Batching Threshold", "Trade Collection Batch Size", "Trade Filtering Batch Size", "Trade Sorting Batch Size".
    - Added the missing item buff for logistic science packs.
  Changes:
    - The Quantum Bazaar slider now only lets you go up to what you can afford.