@@ -3,6 +3,8 @@ Version: 1.5.0
 Date: 15/1/26
   Major Features:
     - Added mod setting for controlling the efficiency of trades (which is the average ratio of the trade's total output-to-input value).
+  Minor Features:
+    - Added more item buffs: rocket turret, rocket launcher
   Changes:
     - Item counts in trades no longer exceed 100 or five total stacks (whichever is smaller).
     - Item counts in trades are now more varied, where lower-valued items are generally in higher quanities than the higher-valued items on the same side of the trade.
